--- a/001_numerov.ipynb
+++ b/001_numerov.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "source": [
     " We need to remember that\n",
-    " $$y_{n} = \\frac{w_{n} + \\frac{h^2}{12}s_{n}}{1 - \\frac{h^2}{12}g_{n}}\n"
+    " $$y_{n} = \\frac{w_{n} + \\frac{h^2}{12}s_{n}}{1 - \\frac{h^2}{12}g_{n}}$$\n"
    ]
   },
   {
